--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -18,10 +18,13 @@
     "review"
   ],
   "author": "KPG Softworks",
+  "license": "UNLICENSED",
+  "private": true,
   "dependencies": {
     "alexa-sdk": "^1.0.23",
     "babel-register": "^6.26.0",
     "isomorphic-fetch": "^2.2.1",
+    "log4js": "^2.4.1",
     "number-to-words": "^1.2.3",
     "promise": "^8.0.1",
     "querystring": "^0.2.0"
