--- a/lambda/custom/.eslintrc.json
+++ b/lambda/custom/.eslintrc.json
@@ -2,5 +2,10 @@
   "extends": "airbnb-base",
   "rules": {
     "comma-dangle": 0
+  },
+  "settings": {
+    "import/resolver": {
+      "babel-module": {}
+    }
   }
 }
