--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -22,16 +22,33 @@
   "private": true,
   "dependencies": {
     "alexa-sdk": "^1.0.23",
-    "babel-register": "^6.26.0",
+    "babel-runtime": "^6.26.0",
     "isomorphic-fetch": "^2.2.1",
-    "log4js": "^2.4.1",
     "number-to-words": "^1.2.3",
     "promise": "^8.0.1",
     "querystring": "^0.2.0"
   },
   "devDependencies": {
-    "eslint": "^4.9.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-module-resolver": "^3.0.0",
+    "babel-plugin-syntax-export-extensions": "^6.13.0",
+    "babel-plugin-syntax-flow": "^6.18.0",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
+    "babel-plugin-transform-es2015-classes": "^6.24.1",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-es2015-parameters": "^6.24.1",
+    "babel-plugin-transform-es2015-spread": "^6.22.0",
+    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
+    "babel-plugin-transform-export-default": "^7.0.0-alpha.20",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^4.14.0",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-import-resolver-babel-module": "^4.0.0",
     "eslint-plugin-import": "^2.8.0"
   }
 }
