--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -8,6 +8,7 @@
   "description": "Book Review Alexa Skill",
   "main": "index.js",
   "scripts": {
+    "compile": "babel --presets es2015 -d dist/ src/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint app"
   },
@@ -30,9 +31,11 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-plugin-check-es2015-constants": "^6.22.0",
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-syntax-export-extensions": "^6.13.0",
     "babel-plugin-syntax-flow": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
@@ -42,6 +45,7 @@
     "babel-plugin-transform-es2015-template-literals": "^6.22.0",
     "babel-plugin-transform-export-default": "^7.0.0-alpha.20",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-plugin-transform-imports": "^1.4.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
