--- a/lambda/custom/.babelrc
+++ b/lambda/custom/.babelrc
@@ -34,19 +34,19 @@
       "transform-imports"
     ],
     [
-      "transform-es2015-arrow-functions",
-      {
-        "spec": true
-      }
+      "transform-es2015-arrow-functions"
+    ],
+    [
+      "transform-es2015-function-name"
     ],
     [
       "transform-es2015-destructuring"
     ],
     [
-      "transform-es2015-block-scoping",
-      {
-        "throwIfClosureRequired": true
-      }
+      "transform-es2015-block-scoped-functions"
+    ],
+    [
+      "transform-es2015-block-scoping"
     ],
     [
       "check-es2015-constants"
@@ -55,10 +55,7 @@
       "transform-es2015-parameters"
     ],
     [
-      "transform-es2015-spread",
-      {
-        "loose": true
-      }
+      "transform-es2015-spread"
     ],
     [
       "transform-object-rest-spread",
@@ -67,23 +64,16 @@
       }
     ],
     [
-      "transform-es2015-template-literals",
-      {
-        "loose": true,
-        "spec": true
-      }
+      "transform-es2015-template-literals"
     ],
     [
-      "transform-es2015-classes",
-      {
-        "spec": true
-      }
+      "transform-es2015-classes"
     ],
     [
-      "transform-class-properties",
-      {
-        "spec": true
-      }
+      "transform-class-properties"
+    ],
+    [
+      "transform-es2015-computed-properties"
     ],
     [
       "transform-flow-strip-types"
